# fw-fanctrl

./: .editorconfig  .gitignore  LICENSE  README.md  config.json  fanctrl.py  flake.nix  install.bat  install.sh  main.py  post-install.sh  pre-uninstall.sh  pyproject.toml  requirements.txt  uninstall.bat
.github/ISSUE_TEMPLATE/: bug-report---packaging-aur.md  bug-report---packaging-nix.md  bug-report---packaging-windows.md  bug_report.md  feature_request.md  other.md
.github/workflows/: auto-tag-and-release.yml  nix-build-stable.yml  nix-build-unstable.yml  nix-build.yml  pr-check-formatting.yml
OpenRC/conf.d/: fw-fanctrl
OpenRC/init.d/: fw-fanctrl
doc/: README.md  build-from-source.md  commands.md  configuration.md  nix-flake.md  nixos.md
fetch/ectool/: LICENSE
fetch/ectool/linux/: hash.sha256
fetch/framework_tool/: LICENSE.md
fetch/framework_tool/linux/: sha256.hash  target.url
nix/: module.nix  package.nix
scripts/: build.sh  install-prebuilt.sh  post-install.sh  privileged_install.sh  privileged_post-install.sh  privileged_pre-install.sh  privileged_pre-uninstall.sh  privileged_uninstall.sh
scripts/shared/: common.sh
services/: fw-fanctrl-suspend.service  fw-fanctrl.service
services/linux/: fw-fanctrl.service
services/system-sleep/: fw-fanctrl-suspend
services/windows/: fw-fanctrl.bat  run-service.bat
src/: Configuration.py  FanController.py  __main__.py
src/fw_fanctrl/: CommandParser.py  Configuration.py  FanController.py  Strategy.py  __init__.py  __main__.py
src/fw_fanctrl/_resources/: config.json  config.schema.json
src/fw_fanctrl/dto/: Printable.py
src/fw_fanctrl/dto/command_result/: CommandResult.py  ConfigurationReloadCommandResult.py  PrintActiveCommandResult.py  PrintCurrentStrategyCommandResult.py  PrintFanSpeedCommandResult.py  PrintStrategyListCommandResult.py  ServicePauseCommandResult.py  ServiceResumeCommandResult.py  SetConfigurationCommandResult.py  StrategyChangeCommandResult.py  StrategyResetCommandResult.py
src/fw_fanctrl/dto/runtime_result/: RuntimeResult.py  StatusRuntimeResult.py
src/fw_fanctrl/enum/: CommandStatus.py  OutputFormat.py
src/fw_fanctrl/exception/: ConfigurationParsingException.py  InvalidStrategyException.py  JSONException.py  SocketAlreadyRunningException.py  SocketCallException.py  UnimplementedException.py  UnknownCommandException.py
src/fw_fanctrl/hardwareController/: EctoolHardwareController.py  FrameworkToolHardwareController.py  HardwareController.py
src/fw_fanctrl/socketController/: SocketController.py  UnixSocketController.py
src/fw_fanctrl_setup/: CommandParser.py  __init__.py  __main__.py  cleanup.py  configs.py  ectool.py  services.py
src/fw_fanctrl_setup/_resources/fetch/ectool/linux/: hash.sha256
src/fw_fanctrl_setup/_resources/services/: fw-fanctrl.service
src/fw_fanctrl_setup/_resources/services/system-sleep/: fw-fanctrl-suspend
src/hardwareController/: EctoolHardwareController.py  HardwareController.py
src/socketController/: SocketController.py  UnixSocketController.py
tests/: test_configuration.py
