[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.github
  | \.idea
  | \.vscode
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | services
  | fetch
  | \.temp
)/
'''

[project]
name = "fw-fanctrl"
version = "1.1.0"
description = "A simple systemd service to better control Framework Laptop's fan(s)."
keywords = ["framework", "laptop", "fan", "control", "cli", "service"]
readme = "README.md"
authors = [
    { name = "TamtamHero" },
]
maintainers = [
    { name = "TamtamHero" },
    { name = "leopoldhub" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.12"
dependencies = [
    "jsonschema==4.*"
]

[project.optional-dependencies]
dev = [
    "black==26.5.1",
]
compile = [
    "Nuitka>=4.1.2"
]

[project.urls]
Homepage = "https://github.com/TamtamHero/fw-fanctrl"
Documentation = "https://github.com/TamtamHero/fw-fanctrl"
Repository = "https://github.com/TamtamHero/fw-fanctrl.git"
Issues = "https://github.com/TamtamHero/fw-fanctrl/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"fw_fanctrl" = ["_resources/**/*"]

[project.scripts]
fw-fanctrl = "fw_fanctrl.__main__:main"
